Fixing Contrast errors CSS

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body {
   margin: 10px auto;
 }
 header {
-  background-color: steelblue;
+  background-color: #325C81;
   color: white;
   padding: 10px;
   display: grid;
@@ -36,7 +36,7 @@ nav {
   text-align: center;
 }
 nav a {
-  background: steelblue;
+  background: #325C81;
   padding: 5px 70px;
   text-decoration: navajowhite;
   color: #fff;
@@ -48,7 +48,7 @@ nav a:hover
 }
 footer {
   padding: 10px;
-  background-color: steelblue;
+  background-color: #325C81;
   color: white;
   display: block;
   text-align: center;
